--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div id="task-container">
         <div id="task-header-container">
-          <h1 id="task-text">📝 Current Task!</h1>
+          <h1 id="task-header">📝 Current Task!</h1>
         </div>
 
         <div id="current-task-container">
