--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link href="style.css" rel="stylesheet" />
     <link href="mediaqueries.css" rel="stylesheet" />
   </head>
+
   <body>
+    <h1 id="screen-size-text">Screen is too small to view web page</h1>
+
     <div id="header-div">
       <h1 class="header">Pomodoro</h1>
     </div>
@@ -32,7 +35,9 @@
 
       <div id="task-container">
         <div id="task-header-container">
-          <h1 id="task-header">📝 Current Task!</h1>
+          <h1 id="task-header">
+            <span role="img" aria-label="Notepad">📝</span> Current Task!
+          </h1>
         </div>
 
         <div id="current-task-container">
