--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teejay's Pomodoro</title>
     <link href="style.css" rel="stylesheet" />
+    <link href="animation.css" rel="stylesheet" />
     <link href="mediaqueries.css" rel="stylesheet" />
   </head>
 
