--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Teejay's Pomodoro</title>
+    <title>Pomodoro Pulse: Time Management App</title>
     <link href="style.css" rel="stylesheet" />
     <link href="animation.css" rel="stylesheet" />
     <link href="mediaqueries.css" rel="stylesheet" />
@@ -12,7 +12,7 @@
     <h1 id="screen-size-text">Screen is too small to view web page</h1>
 
     <div id="header-div">
-      <h1 class="header">Pomodoro</h1>
+      <h1 class="header">Pomodoro Pulse: Time Management App</h1>
     </div>
 
     <div id="current-task-div">
